@@ -28,6 +28,7 @@ Short term:
   - xml
   - Oracle
 * Better API documentation
+* Implement owner merging for all databases, not just rfc822db
 
 * GTK Frontend
 	- If the user jumps to the same main-menu item where he already is the frontend should cancel the jump, but how can we detect that the user is triyng to jump where he actually is and maybe prevent him from jumping?
