@@ -21,6 +21,9 @@ cdebconf (0.80) UNRELEASED; urgency=low
       the config entry for console-data/keymap/full violates that. In the
       process, consolidate the multiple duplicate definitions of
       unescapestr() and escapestr() into one place.
+    - Merge old and new owner lists when setting a question in rfc822db,
+      rather than overwriting the old owners. Add to-do entry for other
+      databases.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100
 
